# glog-modularized

./: CMakeLists.txt  README.md
mlog/: CMakeLists.txt
mlog/src/: logging.cc
mlog/src/glog/: log_severity.h  logging.h.in
test/: CMakeLists.txt  test_cli_srv.cpp
tools/: CMakeLists.txt  design_pattern.h  mlog_wrapper.h  module.cpp  module.h  parameter_server.cpp  parameter_server.h
tools/cli/: cli_client.cpp  cli_command.cpp  cli_command.h  cli_common.h  cli_server.cpp  cli_server.h
tools/cli/cmd_exe/: cmd_center.cpp  cmd_center.h
tools/zlog/: CMakeLists.txt  zlog_wraper.h
